--- a/package.json
+++ b/package.json
@@ -13,10 +13,13 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.18.0",
-    "express": "^4.16.4"
+    "express": "^4.16.4",
+    "http": "0.0.0",
+    "socket.io": "^2.1.1"
   },
   "devDependencies": {
     "@types/express": "^4.16.0",
+    "@types/socket.io": "^2.1.0",
     "typescript": "^3.1.3"
   }
 }
